# cnn-fruiting-body-modeling-tp-ss26

./: .dockerignore  .gitignore  Makefile  README.md
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py  run.py
apps/api/app/api/: error_handlers.py  router.py
apps/api/app/api/routes/: benchmark.py  health.py  models.py  predict.py
apps/api/app/api/schemas/: benchmark.py  error.py  health.py  models.py  prediction.py
apps/api/app/core/: config.py  dependencies.py  logging.py
apps/api/app/domain/benchmark/: dataset.py  entities.py  exceptions.py  metrics.py  ports.py  service.py
apps/api/app/domain/prediction/: entities.py  exceptions.py  ports.py  service.py
apps/api/app/infrastructure/benchmark/: adapter.py  label_parser.py  zip_reader.py
apps/api/app/infrastructure/darknet/: model_registry.py  models.py  parser.py  prediction_adapter.py  runner.py  tempfiles.py
apps/api/app/tests/contract/: test_benchmark_response_schema.py
apps/api/app/tests/integration/: test_main.py
apps/api/app/tests/integration/api/routes/: test_benchmark.py  test_benchmark_route.py  test_models.py  test_predict.py
apps/api/app/tests/integration/infrastructure/darknet/: test_parser.py  test_prediction_adapter.py  test_runner.py
apps/api/app/tests/unit/core/: test_config.py
apps/api/app/tests/unit/domain/benchmark/: test_benchmark_service.py  test_metrics.py
apps/api/app/tests/unit/domain/prediction/: test_service.py
apps/api/app/tests/unit/infrastructure/darknet/: test_model_registry.py
docs/: release-guide.md  settings.json
(+94 files in other folders)
